--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,4 @@
-name: nodebot
+name: wall-e
 description: A simple node.js starter bot for Beep Boop
 avatar: resources/avatar.png
 #background: resources/background.png
