Change Name to kabour

--- a/bot.yml
+++ b/bot.yml
@@ -1,6 +1,6 @@
-name: wall-e
+name: Kabour
 description: A simple node.js starter bot for Beep Boop
-avatar: resources/avatar.png
+avatar: resources/kabour.jpeg
 #background: resources/background.png
 #config:
 #  - name: OPTION
